Subscribe to podcast (#117)
* Podcast prompt styles

* Refactors styles into better components

* Re-arrange elements on episode page

--- a/src/templates/blog-list.css
+++ b/src/templates/blog-list.css
@@ -33,3 +33,9 @@
   color: var(--color-pink);
   font-style: normal;
 }
+
+.podcast-block {
+  align-items: center;
+  justify-content: center;
+  padding-top: 0;
+}
