--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -12,6 +12,12 @@
 .fs-button__highlight {
   background-image: -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
   background-image: linear-gradient(90deg, #26abe8, #f74d7b);
+  color: #fff;
+}
+
+.fs-button__large {
+  font-size: 20px;
+  padding: 8px 25px;
 }
 
 .button {
