--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -3,7 +3,7 @@
   padding: 5px 15px;
   font-size: var(--size-med-sm);
   background: var(--body-bg);
-  border-radius: 20px;
+  border-radius: 30px;
   outline: none;
   color: var(--body-color-faded);
   border: 2px solid var(--input-border-color);
@@ -11,12 +11,19 @@
 
 .fs-text-field--input__highlight {
   border: none;
+  display: block;
+  width: 100%;
 }
 
 .input-boder__highlight {
   background-image: -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
   background-image: linear-gradient(90deg, #26abe8, #f74d7b);
   padding: 2px;
-  border-radius: 20px;
+  border-radius: 30px;
   display: inline-block;
+}
+
+.fs-text-field--input__large {
+  font-size: 20px;
+  padding: 7px 25px;
 }
