--- a/src/components/subscribe-form/subscribe-form.css
+++ b/src/components/subscribe-form/subscribe-form.css
@@ -67,11 +67,14 @@
   color: #8a674f;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1000px) {
   .subscribe-form {
     width: 100%;
+    max-width: 800px;
     display: block;
     margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .subscribe-form--title {
     text-align: left;
@@ -83,5 +86,8 @@
   }
   .subscribe-form--inputs {
     padding-left: 0;
+  }
+  .subscribe-form--inputs > button {
+    margin-top: 20px;
   }
 }
