Improves link styles for podcast episodes

--- a/src/templates/episode.css
+++ b/src/templates/episode.css
@@ -18,3 +18,10 @@
   font-weight: bold;
   font-size: 20px;
 }
+
+.episode-markdown a {
+  text-decoration: none;
+  color: var(--body-color);
+  padding-bottom: 2px;
+  border-bottom: 1px solid var(--body-color-faded);
+}
